# vibot6-mscv3-se

./: CMake.md  CodingTemplates.md  ColourSegmentation.md  CompilingProject.md  Index.md  OpenCV.md  OpenGL.md  ProjectHome.md  ProjectRequirements.md  READMe.txt  TODO.md  TeamA.md  TeamB.md  TeamC.md  TeamD.md  TeamE.md  TeamF.md  TeamG.md  TeamH.md  TeamI.md  TeamJ.md  TeamK.md  TeamL.md  TeamM.md  TeamN.md  TeamO.md  TeamP.md  TeamQ.md  TeamR.md  TeamS.md  TeamT.md  TeamU.md
GielisCurveDemo_Team_J/: gieliscurvegenerator.cpp  mainwindow.cpp  mainwindow.ui
c++/gui/: gui.h  options.h
c++/ihls_nhs/: CMakeLists.txt
c++/rational_supershape_2d/: irationalsupershape2d.h  main.cpp  readme_test.txt  test.h  test.pro
db/: rep-cache.db  uuid
db/revprops/0/: 0  1  2  3
db/revs/0/: 2  3  4  5
matlab/: Postprocessing.m  contour_extraction.m  main.m  mainGUI.m
matlab/Rotational Offset/: Cartisian2Polar.m  FindMinimum.m
matlab/ShapeReconstruction/: DrDa.m  XiSquare.m  radius_.m
matlab/gui/: ProcessImage.m  optionsGUI.fig
project/c++/: README.txt
project/c++/RotationalOffset/: RotationalOffset.cpp  main.cpp
project/c++/gui/: CMakeLists.txt  gui.cpp  gui.h  gui.pro  gui.ui  options.ui  window_QT.cpp  window_QT.h
project/matlab/: Postprocessing.m  ShapeReconstruction.m  contour_extraction.m  gui_main.m  main.m  mainGUI.m  normalize_segmentation.m
tags/release-1.0/c++/: CMakeLists.txt
tags/release-1.0/c++/gui/: CMakeLists.txt  gui.cpp  gui.pro  main.cpp
tags/release-1.0/c++/ihls_nhs/: main.cpp
tags/release-1.0/c++/rational_supershape_2d/: test.cpp
trunk/GielisCurveDemo_Team_J/: GielisDemo.pro  gieliscurvegenerator.cpp  gieliscurvegenerator.h  mainwindow.h  mainwindow.ui
trunk/project/c++/gui/: CMakeLists.txt  gui.cpp  gui.h  gui.pro  gui.ui  options.cpp  options.h  options.ui
trunk/vibot6_mscv3/: Makefile
vibot6_mscv3/: .cproject  .project  Optimize2.txt
vibot6_mscv3/Debug/: makefile  objects.mk
vibot6_mscv3/Gui/: gui.cpp  gui.h  gui.ui  options.ui
vibot6_mscv3/MatlabGui/: ImplicitFunction1_.m  ImplicitFunction2_.m  ImplicitFunction3_.m  RpUnion_.m  gui_matlab.fig  optionsGUI.m
vibot6_mscv3/Results/: Different0001(1).txt  Different0023(1).txt  Different0040(2).txt  octogonal0016(1).txt  octogonal0016(2).txt  octogonal0018(1).txt  rectangular0002(1).txt  rectangular0003(1).txt  rectangular0004(1).txt  rectangular0007(1).txt  rectangular0008(1).txt  rectangular0008(2).txt  rectangular0008(3).txt  rectangular0009(1).txt  triangular0014(2).txt  triangular0016(1).txt  triangular0017(1).txt  triangular0017(2).txt  triangular0025(1).txt
vibot6_mscv3/src/: SuperFormula.cpp  ihls.h  math_utils.cpp  nhs.cpp  nhs.h  random-standalone.cpp  random-standalone.h  useful.cpp  useful.h
wiki/: BlankTeam.wiki  CMake.wiki  CircleGroup.wiki  CloudTeam.wiki  CodingTemplates.wiki  ColourSegmentation.wiki  CompilingProject.wiki  HeartTeam.wiki  Index.wiki  OpenCV.wiki  OpenGL.wiki  ProjectRequirements.wiki  Requirements.wiki  TODO.wiki  TeamA.wiki  TeamB.wiki  TeamC.wiki  TeamD.wiki  TeamE.wiki  TeamF.wiki  TeamG.wiki  TeamH.wiki  TeamI.wiki  TeamJ.wiki  TeamK.wiki  TeamL.wiki  TeamM.wiki  TeamN.wiki  TeamO.wiki  TeamP.wiki  TeamQ.wiki  TeamR.wiki  TeamS.wiki  TeamT.wiki  TeamU.wiki  TriangleTeam.wiki
(+274 files in other folders)
